# crypto-trend-crew-ai

./: .gitignore  Makefile  README.md  agents.yaml  env.example  main.py  pyproject.toml  tasks.yaml
dashboard/: app.py
project/: .gitignore  README.md  pyproject.toml
project/src/project/: crew.py  main.py
project/src/project/config/: agents.yaml  tasks.yaml
project/src/project/tools/: coingecko_tool.py  cryptopanic_tool.py  news_tool.py  sqlite_tool.py
