[project]
name = "crypto-trend-crew-ai"
version = "0.1.0"
description = "Sistema Multiagente de Análise de Tendência em Criptoativos com CrewAI"
authors = [
    {name = "William Reis", email = "wjsreis.dev@gmail.com"}
]
dependencies = [
    "crewai",
    "requests",
    "beautifulsoup4",
    "streamlit",
    "pyyaml",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
